--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
   }
 
   var getWizardY = function (height) {
-    return (height / 3) * 2;
+    return (height / 3 * 2) - getWizardHeight();
   }
 </script>
 <script src="js/game.js"></script>
