--- a/index.html
+++ b/index.html
@@ -205,7 +205,15 @@
   }
 </script>
 <script src="js/game.js"></script>
+<script src="js/validation.js"></script>
+<script src="js/utils.js"></script>
+<script src="js/dialog.js"></script>
+<script src="js/wizards.js"></script>
+<script src="js/rendering-wizards.js"></script>
+<script src="js/cloud.js"></script>
+<script src="js/columns.js"></script>
 <script src="js/stat.js"></script>
-<script src="js/setup.js"></script>
+<script src="js/setup-wizard.js"></script>
+<script src="js/drag.js"></script>
 </body>
 </html>
