Подключает модуль backend и отключает модуль wizards

--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
 <script src="js/validation.js"></script>
 <script src="js/utils.js"></script>
 <script src="js/dialog.js"></script>
-<script src="js/wizards.js"></script>
+<script src="js/backend.js"></script>
 <script src="js/rendering-wizards.js"></script>
 <script src="js/cloud.js"></script>
 <script src="js/columns.js"></script>
